--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TheLab</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/style.min.css" media="screen" title="no title" charset="utf-8">
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
