--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TheLab</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.min.css" media="screen" title="no title">
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
@@ -15,16 +15,16 @@
 
     <div class="jumbotron">
       <div class="container">
-        <div clas="row">
+        <div class="row">
             <div class="col-md-6 col-sm-12">
-              <img class="logo" src="img/logo.png">
+              <img class="logo" src="img/logo.png" alt="">
               <h1>Dex’s Laboratory: <br /> a funny freebie.</h1>
               <p>Brought to You by Balkan Brothers studio... </p>
               <p><a class="btn btn-primary btn-lg" href="#" role="button">Le' Download</a></p>
           </div>
           <div class="phone col-md-6 col-sm-12">
             <div class="container">
-              <img class="iphone img-responsive" src="img/phone.png">
+              <img class="iphone img-responsive" src="img/phone.png" alt="">
             </div>
           </div>
         </div>
@@ -33,7 +33,7 @@
           <div class="container">
             <div class="row">
               <div class="social-icons">
-              <p>We are never empty handed towards our dribbble community.<br /> <span><a href="#"><i class="fa fa-facebook-square"></i></a><a href="#"><i class="fa fa-instagram"></a></i><a href="#"><i class="fa fa-twitter"></i></a></span></p>
+              <p>We are never empty handed towards our dribbble community.<br /> <span><a href="#"><i class="fa fa-facebook-square"></i></a><a href="#"><i class="fa fa-instagram"></i></a><a href="#"><i class="fa fa-twitter"></i></a></span></p>
             </div>
           </div>
         </div>
@@ -132,7 +132,7 @@
           <li class="skype col-md-4"><h4>filip.justic</h4><p>filip.justic</p></li>
         </ul>
       </div>
-      <p>&copy Developed by <a href="http://www.ivanbar.com/">IvanBar</a> and Designed by BB 2016</a></p>
+      <p>&copy; Developed by <a href="http://www.ivanbar.com/">IvanBar</a> and Designed by BB 2016</p>
     </div>
   </footer>
     <!-- jquery -->
